--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -8,6 +8,7 @@
  width: 100%;
  height: 100%;
  display: flex;
+ padding-bottom: 2%;
 }  
 
 .left-content{ 
@@ -25,8 +26,8 @@
 }
 
 .right-content{
-    width: 50%;
-    margin: 30px 0 30px 700px;
+   width: 50%; 
+   padding: 0 0 0 17%;
     p{
         font-family: 'Roboto';
         color: white;
@@ -38,4 +39,3 @@
         margin-left: 4%;
     }
 }
-
