--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,26 @@
-<app-banner src="assets/imagens/banner-homepage.png" alt=" Banner da aplicação Jornada"></app-banner>
-<app-container> </app-container>
+<app-banner
+src="assets/imagens/banner-homepage.png"
+alt="Banner da aplicação Jornada">
+</app-banner> 
+<app-container>
+<h2>Promoções</h2>
+<app-form-busca></app-form-busca>
+
+<div class="card-wrapper">
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+  <app-card-busca></app-card-busca>
+</div>
+
+<div class="card-now-wrapper">
+  <app-card-depoimento></app-card-depoimento>
+  <app-card-depoimento></app-card-depoimento>
+  <app-card-depoimento></app-card-depoimento>
+</div>
+</app-container> 
