--- a/src/app/shared/form-busca/form-busca.component.scss
+++ b/src/app/shared/form-busca/form-busca.component.scss
@@ -10,6 +10,9 @@
   .input-container {
     margin-bottom: -1.25em;
   }
+  .button-back-off{
+    margin-bottom: 0.5em;
+  }
   .mat-button-toggle-checked {
     background-color: #F7F2FA;
   }
