--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -43,5 +43,10 @@
         width: 100%;
       }
     }
+    .categoria, h3 {
+      color: #1D1B20;
+      margin: 0;
+      font-weight: 500;
+    }
   }
   
