--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,18 +5,9 @@ alt="Banner da aplicação Jornada">
 <app-container>
 <h2>Promoções</h2>
 <app-form-busca></app-form-busca>
+<h2>Promoções</h2>
 
-<div class="card-wrapper">
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-  <app-card-busca></app-card-busca>
-</div>
+  <app-promocoes></app-promocoes>
 
 <div class="card-now-wrapper">
   <app-card-depoimento></app-card-depoimento>
