--- a/src/app/shared/card-busca/card-busca.component.html
+++ b/src/app/shared/card-busca/card-busca.component.html
@@ -2,8 +2,8 @@
     <img mat-card-image src="assets/imagens/Veneza.png" alt="Imagem de Veneza">
     <mat-card-content>
      <ul>
-       <li>Veneza</li>
-       <li>R$ 500</li> 
+       <li>{{promocao.destino}}</li>
+       <li>{{promocao.preco}}</li> 
     </ul>
     </mat-card-content>
     <mat-card-actions>
