--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -17,22 +17,25 @@
         </mat-chip-listbox>
     </div>
     <div class="flex-container">
-        <mat-form-field class="input-container"  appearance="outline">
+       <!--
+       <mat-form-field class="input-container"  appearance="outline">
           <mat-label>Origem</mat-label>
           <mat-icon matPrefix>flight_takeoff</mat-icon>
           <input matInput placeholder="Origem">
           <mat-icon matSuffix>search</mat-icon>
-        </mat-form-field>
+        </mat-form-field> -->
+        <app-dropdown-uf>
         <button mat-icon-button>
-         <mat-icon>sync_alt </mat-icon>
+          <mat-icon>sync_alt </mat-icon>
         </button>
+        </app-dropdown-uf> <!--
         <mat-form-field class="input-container"  appearance="outline">
             <mat-label>Destino</mat-label>
             <mat-icon matPrefix>flight_land</mat-icon>
             <input matInput placeholder="Destino">
             <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>   
-        
+        -->
         <mat-form-field class="input-container" appearance="outline">  
           <mat-label>Data de volta</mat-label>
           <input matInput [matDatepicker]="picker1" placeholder="Selecione">
