--- a/src/app/shared/form-busca/form-busca.component.html
+++ b/src/app/shared/form-busca/form-busca.component.html
@@ -28,7 +28,9 @@
         <button mat-icon-button>
           <mat-icon>sync_alt </mat-icon>
         </button>
-        </app-dropdown-uf> <!--
+        </app-dropdown-uf> 
+        <app-dropdown-uf label="Destino"/>
+        <!--
         <mat-form-field class="input-container"  appearance="outline">
             <mat-label>Destino</mat-label>
             <mat-icon matPrefix>flight_land</mat-icon>
