--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -2,33 +2,9 @@
     <h2 mat-dialog-title>Viajante</h2>
     <mat-dialog-content> 
     <div class="selecao-idade"> 
-        <ul> 
-         <li>Adultos</li>        
-         <li>(Acima de 12 anos)</li>
-         <li>
-            <app-botao-controle operacao = "decrementar"></app-botao-controle>
-            <span>1</span>
-            <app-botao-controle operacao = "incrementar"></app-botao-controle>
-        </li>
-        </ul>
-        <ul> 
-            <li>Crianças</li>        
-            <li>(Entre 2 e 11 anos)</li>
-            <li>
-               <app-botao-controle operacao = "decrementar"></app-botao-controle>
-               <span>1</span>
-               <app-botao-controle operacao = "incrementar"></app-botao-controle>
-           </li>
-        </ul>
-        <ul> 
-            <li>Bebês</li>        
-            <li>(Até 2 anos)</li>
-            <li>
-               <app-botao-controle operacao = "decrementar"></app-botao-controle>
-               <span>1</span>
-               <app-botao-controle operacao = "incrementar"></app-botao-controle>
-           </li>
-           </ul>
+        <app-seletor-passageiro [formControl]="formBuscaService.obterControle('adultos')" titulo="Adultos" subtitulo="Acima de 12 anos"/>
+        <app-seletor-passageiro [formControl]="formBuscaService.obterControle('criancas')" titulo="Crianças" subtitulo="Entre 2 e 11 anos"/>
+        <app-seletor-passageiro [formControl]="formBuscaService.obterControle('bebes')" titulo="Bebês" subtitulo="Até 2 anos"/>
     </div>
     <div class="categoria"><h3>Categoria</h3>
         <mat-chip-listbox (click)="openDialog()" aria-label="Seleção de passagem">
