--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,17 +14,26 @@
                 <mat-card-header>
                   <mat-card-title>Login</mat-card-title>
                 </mat-card-header>
-                <form>
+                <form [formGroup]="loginForm">
                     <mat-card-content>
                         <mat-form-field appearance="outline">
                             <mat-label>E-mail</mat-label>
-                            <input matInput type="email" placeholder="Digite seu E-mail"/>
+                            <input formControlName="email" matInput type="email" placeholder="Digite seu E-mail"/>
                         </mat-form-field>
                         <mat-form-field appearance="outline">
                             <mat-label>Senha</mat-label>
-                            <input matInput type="password" placeholder="Digite sua senha"/>
+                            <input formControlName="senha" matInput type="password" placeholder="Digite sua senha"/>
                         </mat-form-field>
                     </mat-card-content>
+                    <mat-card-actions>
+                        <button (click)="login()" mat-flat-button color="primary">
+                         ACESSAR MINHA CONTA
+                        </button>
+                    </mat-card-actions>
+                    <p>
+                       Ainda não possui conta ?
+                       <a href="#"><strong></strong><u></u>Clique aqui para se cadastrar</a> 
+                    </p>
                 </form>        
         </div>
     </mat-card>
