implementando tela de cadastro

--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -3,6 +3,8 @@
     alt="banner da imagem de cadastro">
 </app-banner>
 
-<app-form-base>
-    
+<app-form-base 
+    [perfilComponent]="perfilComponent"
+    (acaoClique)="cadastrar()">
+
 </app-form-base>
