--- a/src/app/shared/form-base/form-base.component.html
+++ b/src/app/shared/form-base/form-base.component.html
@@ -5,7 +5,7 @@
           Crie sua conta
         </mat-card-title>
         <section>
-          <div class="acoesPerfil">
+          <div class="acoesPerfil" *ngIf="perfilComponent">
             <h2>Dados pessoais</h2>
             <button mat-stroked-button color="primary">
               <mat-icon>logout</mat-icon>
@@ -68,8 +68,8 @@
             </div>
           </div>
         </mat-card-content>
-        <mat-divider></mat-divider>
-        <div class="acessoPerfil">
+        <mat-divider *ngIf="perfilComponent"></mat-divider>
+        <div class="acessoPerfil" *ngIf="perfilComponent">
           <h2>Dados de acesso</h2>
         </div>
         <mat-card-content>
@@ -102,13 +102,13 @@
               </mat-form-field>
             </div>
           </div>
-          <mat-checkbox formControlName="aceitarTermos" color="primary" class="full-width">Li e aceito os termos e condições deste cadastro *</mat-checkbox>
+          <mat-checkbox *ngIf="!perfilComponent" formControlName="aceitarTermos" color="primary" class="full-width">Li e aceito os termos e condições deste cadastro *</mat-checkbox>
           <mat-error *ngIf="cadastroForm.get('aceitarTermos')?.invalid && cadastroForm.get('aceitarTermos')?.dirty">
             Você precisa aceitar os termos e condições para efetuar o cadastro
           </mat-error>
         </mat-card-content>
         <mat-card-actions class="full-width">
-          <button mat-flat-button
+          <button (click)="executarAcao()" mat-flat-button
             [disabled]="cadastroForm.invalid"
             color="primary"
           >CADASTRAR
