--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -5,5 +5,7 @@ alt="Banner da tela de perfil">
 <app-form-base
 [titulo]="titulo"
 [textoBotao]="textoBotao"
-[perfilComponent]="perfilComponent">
+[perfilComponent]="perfilComponent"
+(sair) = "deslogar()"
+(acaoClique)="atualizar()">
 </app-form-base>
