--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,10 +2,20 @@
     <mat-toolbar>
         <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada Milhas"/>
         <span class="spacer"></span>
+        <div class="links-toolbar">
         <button mat-button>Vender Milhas</button>
         <button mat-button>Sobre</button>
+        <ng-container *ngIf="user$ | async as pessoaUsuario, else login">
+          <a routerLink="/perfil">
+            <img src="assets/icones/user.png" alt = "ícone da pessoa usuária">
+          </a>
+            <button mat-stroked-button (click)="logout()">SAIR</button>
+        </ng-container>
+        <ng-template #login>
         <button routerLink="/cadastro" mat-raised-button color="primary">CADASTRE-SE</button>
         <button routerLink="/login" mat-stroked-button>LOGIN</button>
+      </ng-template>
+      </div> 
       </mat-toolbar>
 </header>
  
