--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,22 +1,36 @@
-.app-header{
-  button{
+.app-header {
+
+  button {
     margin: 0 16px;
   }
+
   .spacer {
-   flex: 1 1 auto;
+    flex: 1 1 auto;
   }
-  
-  .mat-toolbar{
-  background-color: black;
-  color: white;
-  padding: 0 256px;
+
+  .mat-toolbar {
+    background-color: black;
+    color: white;
+    padding: 0 256px;
   }
-  
-  .mat-mdc-outlined-button:not(:disabled){
-  border-color: white;
+
+  .links-toolbar > * {
+    margin-right: 20px;
   }
+
+  .links-toolbar > *:first-child {
+    margin-right: 0;
+  }
+
+  img {
+    vertical-align: middle;
+  }
+
+  .mat-mdc-outlined-button:not(:disabled) {
+    border-color: #673ab7;
+    color: #673ab7;
+  }
+
 }
-
-
 
 
