--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,8 @@
 <header class="app-header">
     <mat-toolbar>
-        <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada Milhas"/>
+        <a routerLink="/">
+          <img src="assets/imagens/logo.png" alt="Logo da aplicação Jornada Milhas"/>
+        </a>
         <span class="spacer"></span>
         <div class="links-toolbar">
         <button mat-button>Vender Milhas</button>
