--- a/src/app/shared/card-busca/card-busca.component.html
+++ b/src/app/shared/card-busca/card-busca.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card-busca">
-    <img mat-card-image src="assets/imagens/Veneza.png" alt="Imagem de Veneza">
+    <img mat-card-image src="{{promocao.imagem}}" alt="Imagem de Veneza">
     <mat-card-content>
      <ul>
        <li>{{promocao.destino}}</li>
