--- a/src/app/shared/form-base/form-base.component.html
+++ b/src/app/shared/form-base/form-base.component.html
@@ -36,7 +36,8 @@
               </mat-form-field>
               <mat-form-field appearance="outline">
                 <mat-label>CPF</mat-label>
-                <input matInput formControlName="cpf" placeholder="Digite seu CPF">
+                <input matInput formControlName="cpf" placeholder="Digite seu CPF"  inputmode="numeric"
+                mask="000.000.000-00">
                 <mat-error *ngIf="cadastroForm.get('cpf')?.errors">CPF é obrigatório</mat-error>
               </mat-form-field>
               <mat-form-field appearance="outline">
@@ -56,7 +57,8 @@
               </div>
               <mat-form-field appearance="outline">
                 <mat-label>Telefone</mat-label>
-                <input matInput formControlName="telefone" placeholder="+XX XXXX-XXXX">
+                <input matInput formControlName="telefone" placeholder="+XX XXXX-XXXX" 
+                mask="(00) 0 0000 0000" prefix="+55 "type="tel">
                 <mat-error *ngIf="cadastroForm.get('telefone')?.errors">Telefone é obrigatório</mat-error>
               </mat-form-field>
               <app-dropdown-uf
