corrige a rota no login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -35,7 +35,7 @@
                     </mat-card-actions>
                     <p>
                        Ainda não possui conta ?
-                       <a href="#"><strong></strong><u></u>Clique aqui para se cadastrar</a> 
+                       <a href="cadastro"><strong></strong><u></u>Clique aqui para se cadastrar</a> 
                     </p>
                 </form>        
         </div>
