--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,8 +10,6 @@ alt="Banner da aplicação Jornada">
 <app-promocoes></app-promocoes>
 
 <div class="card-now-wrapper">
-  <app-card-depoimento></app-card-depoimento>
-  <app-card-depoimento></app-card-depoimento>
-  <app-card-depoimento></app-card-depoimento>
+  <app-depoimentos></app-depoimentos>
 </div>
 </app-container> 
