--- a/src/app/shared/card-depoimento/card-depoimento.component.scss
+++ b/src/app/shared/card-depoimento/card-depoimento.component.scss
@@ -1,27 +1,26 @@
-.card-depoimento{
-width: 300px;
-background-color: #FEF7FF;
-margin: 0 0 90px 0;
-img{
-    height: 56px;
-    width: 56px; 
-}
 
-ul{ 
-    display: flex;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    font-family: 'Times New Roman';
-    font-weight: 400;
-    size: 16px; 
-    li{
-        padding-left: 8%;
+.depoimento {
+    max-width: 320px;
+    background-color: #FEF7FF;
+    border: none;
+    img {
+      max-width: 56px;
+      max-height: 56px;
+      margin-top: 16px;
     }
-}
-
-.nome-pessoa{
-font-weight: bold;    
-}
-
-}
+    ul {
+      padding: 0;
+      list-style: none;
+      li {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+      }
+    }
+    mat-card-content {
+      display: flex;
+      align-items: start;
+      gap: 16px;
+    }
+  }
